# musikbox

./: CLAUDE.md  Dockerfile.service  README.md  pyproject.toml
.githooks/: pre-commit
docs/specs/: event-driven-player.md  llm-enrichment.md  mvp-architecture.md  playback.md  playlists.md
musikbox/: bootstrap.py  test_bootstrap.py  test_integration.py
musikbox/adapters/: essentia_analyzer.py  fake_analyzer.py  fake_downloader.py  fake_enricher.py  fake_genre_lookup.py  fake_player.py  haiku_enricher.py  lastfm_genre_lookup.py  librosa_analyzer.py  local_source_resolver.py  metadata_writer.py  migrations.py  mpv_player.py  musicbrainz_genre_lookup.py  remote_stream_resolver.py  sqlite_playlist_repository.py  sqlite_repository.py  test_fake_analyzer.py  test_fake_downloader.py  test_fake_enricher.py  test_fake_genre_lookup.py  test_fake_player.py  test_haiku_enricher.py  test_lastfm_genre_lookup.py  test_local_source_resolver.py  test_metadata_writer.py  test_migrations.py  test_musicbrainz_genre_lookup.py  test_remote_stream_resolver.py  test_sqlite_playlist_repository.py  test_sqlite_repository.py  test_track_id_source_resolver.py  test_ytdlp_downloader.py  track_id_source_resolver.py  ytdlp_downloader.py
musikbox/cli/: analyze.py  config.py  db.py  download.py  library.py  main.py  play.py  playlist.py  test_analyze.py  test_db.py  test_download.py  test_main.py  test_play.py  test_playlist.py
musikbox/client/: http_playlist_repository.py  http_track_repository.py  remote_player.py  test_http_playlist_repository.py  test_http_track_repository.py  transport.py  (+2 more)
(+74 files in other folders)
