[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musikbox"
version = "0.1.0"
description = "CLI tool for downloading, analyzing, and managing a local music library"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "yt-dlp>=2024.0",
    "mutagen>=1.47",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
analysis = ["librosa>=0.10"]
analysis-essentia = ["essentia"]
playback = ["python-mpv>=1.0"]
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
    "ruff>=0.4",
    "numpy>=1.26",
]

[project.scripts]
musikbox = "musikbox.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["musikbox"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
